--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -126,6 +126,9 @@
   <data name="AnErrorOccured" xml:space="preserve">
     <value>An error occurred while processing your request.</value>
   </data>
+  <data name="AssignRole" xml:space="preserve">
+    <value>Assign Role</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Back</value>
   </data>
@@ -138,8 +141,14 @@
   <data name="City" xml:space="preserve">
     <value>City</value>
   </data>
+  <data name="Clinic" xml:space="preserve">
+    <value>Clinic</value>
+  </data>
   <data name="ClinicCode" xml:space="preserve">
     <value>Clinic Code</value>
+  </data>
+  <data name="ClinicList" xml:space="preserve">
+    <value>Clinic List</value>
   </data>
   <data name="ClinicName" xml:space="preserve">
     <value>Clinic Name</value>
@@ -162,14 +171,26 @@
   <data name="Dashboard" xml:space="preserve">
     <value>Dashboard</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="DeleteConfirmation" xml:space="preserve">
+    <value>Are you sure you want to delete this data ( ID : </value>
+  </data>
   <data name="Department" xml:space="preserve">
     <value>Department</value>
   </data>
   <data name="Description" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
+  </data>
+  <data name="EmpID" xml:space="preserve">
+    <value>Employee ID</value>
   </data>
   <data name="Employee" xml:space="preserve">
     <value>Employee</value>
@@ -177,7 +198,13 @@
   <data name="EmployeeId" xml:space="preserve">
     <value>Employee ID</value>
   </data>
+  <data name="EmployeeList" xml:space="preserve">
+    <value>Employee List</value>
+  </data>
   <data name="EmployeeType" xml:space="preserve">
+    <value>Employee Type</value>
+  </data>
+  <data name="EmpType" xml:space="preserve">
     <value>Employee Type</value>
   </data>
   <data name="EnterEmailInstruction" xml:space="preserve">
@@ -261,6 +288,9 @@
   <data name="OrganizationCode" xml:space="preserve">
     <value>Organization Code</value>
   </data>
+  <data name="OrganizationList" xml:space="preserve">
+    <value>Organization List</value>
+  </data>
   <data name="OrganizationName" xml:space="preserve">
     <value>Organization Name</value>
   </data>
@@ -272,6 +302,9 @@
   </data>
   <data name="Privilege" xml:space="preserve">
     <value>Privilege</value>
+  </data>
+  <data name="PrivilegeList" xml:space="preserve">
+    <value>Privilege List</value>
   </data>
   <data name="RecoverPassword" xml:space="preserve">
     <value>Recover Password</value>
@@ -297,11 +330,20 @@
   <data name="RoleAssignment" xml:space="preserve">
     <value>Role Assignment</value>
   </data>
+  <data name="RoleList" xml:space="preserve">
+    <value>Role List</value>
+  </data>
   <data name="RolePrivilege" xml:space="preserve">
     <value>Role Privilege</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <data name="SetPrivilege" xml:space="preserve">
+    <value>Set Privilege</value>
+  </data>
+  <data name="SetRolePrivilege" xml:space="preserve">
+    <value>Set Role Privilege</value>
   </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
@@ -314,6 +356,9 @@
   </data>
   <data name="Update" xml:space="preserve">
     <value>Update</value>
+  </data>
+  <data name="UserList" xml:space="preserve">
+    <value>User List</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Username</value>
