--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Action" xml:space="preserve">
+    <value>Action</value>
+  </data>
   <data name="AddNew" xml:space="preserve">
     <value>Add New</value>
   </data>
@@ -183,6 +186,9 @@
   <data name="Description" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="Doctor" xml:space="preserve">
+    <value>Doctor</value>
+  </data>
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
   </data>
@@ -204,6 +210,9 @@
   <data name="EmployeeType" xml:space="preserve">
     <value>Employee Type</value>
   </data>
+  <data name="EmploymentType" xml:space="preserve">
+    <value>Relation</value>
+  </data>
   <data name="EnterEmailInstruction" xml:space="preserve">
     <value>Enter your e-mail below and we will send you reset instructions!</value>
   </data>
@@ -221,6 +230,9 @@
   </data>
   <data name="ExpiredDate" xml:space="preserve">
     <value>Expired Date</value>
+  </data>
+  <data name="FamilyRelationship" xml:space="preserve">
+    <value>Relation</value>
   </data>
   <data name="Female" xml:space="preserve">
     <value>Female</value>
@@ -270,6 +282,9 @@
   <data name="Menu" xml:space="preserve">
     <value>Menu</value>
   </data>
+  <data name="MRNumber" xml:space="preserve">
+    <value>MR Number</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
@@ -297,6 +312,15 @@
   <data name="Password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="PatientName" xml:space="preserve">
+    <value>Patient Name</value>
+  </data>
+  <data name="PoliFrom" xml:space="preserve">
+    <value>Poli From</value>
+  </data>
+  <data name="PoliTo" xml:space="preserve">
+    <value>Poli To</value>
+  </data>
   <data name="Privilege" xml:space="preserve">
     <value>Privilege</value>
   </data>
@@ -305,6 +329,21 @@
   </data>
   <data name="RecoverPassword" xml:space="preserve">
     <value>Recover Password</value>
+  </data>
+  <data name="ReffID" xml:space="preserve">
+    <value>Reff ID</value>
+  </data>
+  <data name="RegistrationList" xml:space="preserve">
+    <value>Registration List</value>
+  </data>
+  <data name="RegistrationStatus" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="RegistrationType" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="Remark" xml:space="preserve">
+    <value>Remark</value>
   </data>
   <data name="RememberMe" xml:space="preserve">
     <value>Remember Me</value>
@@ -342,11 +381,17 @@
   <data name="SetRolePrivilege" xml:space="preserve">
     <value>Set Role Privilege</value>
   </data>
+  <data name="SortNumber" xml:space="preserve">
+    <value>Queue</value>
+  </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
   </data>
   <data name="ThisAccountLocked" xml:space="preserve">
     <value>This account has been locked out, please try again later.</value>
+  </data>
+  <data name="TransactionDate" xml:space="preserve">
+    <value>Transaction Date</value>
   </data>
   <data name="UnauthorizedAccess" xml:space="preserve">
     <value>Unauthorized Access .. !</value>
@@ -359,11 +404,5 @@
   </data>
   <data name="Username" xml:space="preserve">
     <value>Username</value>
-  </data>
-  <data name="EmploymentType" xml:space="preserve">
-    <value>Relation</value>
-  </data>
-  <data name="FamilyRelationship" xml:space="preserve">
-    <value>Relation</value>
   </data>
 </root>
