--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -405,4 +405,25 @@
   <data name="Username" xml:space="preserve">
     <value>Username</value>
   </data>
+  <data name="DoctorList" xml:space="preserve">
+    <value>Doctor List</value>
+  </data>
+  <data name="DoctorType" xml:space="preserve">
+    <value>Doctor Type</value>
+  </data>
+  <data name="HPNumber" xml:space="preserve">
+    <value>HP Number</value>
+  </data>
+  <data name="KTPNumber" xml:space="preserve">
+    <value>KTP No</value>
+  </data>
+  <data name="STRNumber" xml:space="preserve">
+    <value>STR No</value>
+  </data>
+  <data name="ValidFrom" xml:space="preserve">
+    <value>Valid From</value>
+  </data>
+  <data name="ValidTo" xml:space="preserve">
+    <value>Valid To</value>
+  </data>
 </root>
