--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -366,4 +366,34 @@
   <data name="FamilyRelationship" xml:space="preserve">
     <value>Relation</value>
   </data>
+  <data name="BusinessUnit" xml:space="preserve">
+    <value>Business Unit</value>
+  </data>
+  <data name="EmpStatus" xml:space="preserve">
+    <value>Emp Status</value>
+  </data>
+  <data name="HPNumber" xml:space="preserve">
+    <value>No HP</value>
+  </data>
+  <data name="KTP" xml:space="preserve">
+    <value>KTP No</value>
+  </data>
+  <data name="Region" xml:space="preserve">
+    <value>Region</value>
+  </data>
+  <data name="EmpEndDate" xml:space="preserve">
+    <value>End Date</value>
+  </data>
+  <data name="EmpGrade" xml:space="preserve">
+    <value>Grade</value>
+  </data>
+  <data name="EmpJoinDate" xml:space="preserve">
+    <value>Join Date</value>
+  </data>
+  <data name="LastEmpID" xml:space="preserve">
+    <value>Last Emp ID</value>
+  </data>
+  <data name="EmpReffID" xml:space="preserve">
+    <value>Emp Reff</value>
+  </data>
 </root>
