Final Master Employee

--- a/Klinik.Resources/Messages.resx
+++ b/Klinik.Resources/Messages.resx
@@ -211,4 +211,10 @@ Administrator</value>
   <data name="Patient" xml:space="preserve">
     <value>Patient</value>
   </data>
+  <data name="UnrecognizedEmployee" xml:space="preserve">
+    <value>Employee {0} is not recognized</value>
+  </data>
+  <data name="ValidationUnrecognizedFields" xml:space="preserve">
+    <value>Following fields are not recognized : {0}</value>
+  </data>
 </root>
