Added reschedule feature on PoliSchedule

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -528,4 +528,7 @@
   <data name="BackToHome" xml:space="preserve">
     <value>Back To Home</value>
   </data>
+  <data name="Reschedule" xml:space="preserve">
+    <value>Reschedule</value>
+  </data>
 </root>
