Generate queue number with poliCode+sortnumber in 3 digit format

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -540,4 +540,7 @@
   <data name="EditParamedicForm" xml:space="preserve">
     <value>Edit Paramedic Form</value>
   </data>
+  <data name="QueueCode" xml:space="preserve">
+    <value>Queue Code</value>
+  </data>
 </root>
