--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -543,4 +543,43 @@
   <data name="QueueCode" xml:space="preserve">
     <value>Queue Code</value>
   </data>
+  <data name="BloodType" xml:space="preserve">
+    <value>Blood Type</value>
+  </data>
+  <data name="BPJSNo" xml:space="preserve">
+    <value>No BPJS</value>
+  </data>
+  <data name="CurrentAddress" xml:space="preserve">
+    <value>Current Address</value>
+  </data>
+  <data name="MaritalStatus" xml:space="preserve">
+    <value>Marital Status</value>
+  </data>
+  <data name="OldMRNumber" xml:space="preserve">
+    <value>Old MR Number</value>
+  </data>
+  <data name="PatientList" xml:space="preserve">
+    <value>List Pasien</value>
+  </data>
+  <data name="ReffPerson" xml:space="preserve">
+    <value>Emergency Call Name</value>
+  </data>
+  <data name="ReffPersonNo" xml:space="preserve">
+    <value>Emergency Phone No</value>
+  </data>
+  <data name="ReffRelation" xml:space="preserve">
+    <value>Relation</value>
+  </data>
+  <data name="Photo" xml:space="preserve">
+    <value>Photo</value>
+  </data>
+  <data name="UploadedPhoto" xml:space="preserve">
+    <value>Uploaded Photo</value>
+  </data>
+  <data name="Replace" xml:space="preserve">
+    <value>Replace</value>
+  </data>
+  <data name="UseExistingGoLoket" xml:space="preserve">
+    <value>Use Existing Data &amp; Go to Loket</value>
+  </data>
 </root>
