Updated the edmx based on latest DB Updated registration page

--- a/Klinik.Resources/Messages.resx
+++ b/Klinik.Resources/Messages.resx
@@ -253,4 +253,16 @@ Administrator</value>
   <data name="SessionExpired" xml:space="preserve">
     <value>Session Expired</value>
   </data>
+  <data name="Company" xml:space="preserve">
+    <value>Company</value>
+  </data>
+  <data name="Female" xml:space="preserve">
+    <value>Female</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="Male" xml:space="preserve">
+    <value>Male</value>
+  </data>
 </root>
