--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -660,4 +660,19 @@
   <data name="Number" xml:space="preserve">
     <value>Number</value>
   </data>
+  <data name="IsPreExamined" xml:space="preserve">
+    <value>Is PreExamined</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Age</value>
+  </data>
+  <data name="PatientData" xml:space="preserve">
+    <value>Patient Data</value>
+  </data>
+  <data name="Month" xml:space="preserve">
+    <value>month</value>
+  </data>
+  <data name="Years" xml:space="preserve">
+    <value>years</value>
+  </data>
 </root>
