--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -735,4 +735,82 @@
   <data name="FormExamine" xml:space="preserve">
     <value>Form Examine</value>
   </data>
+  <data name="Anamnesa" xml:space="preserve">
+    <value>Anamnesa</value>
+  </data>
+  <data name="Attachment" xml:space="preserve">
+    <value>Attachment</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Change" xml:space="preserve">
+    <value>Change</value>
+  </data>
+  <data name="Diagnose" xml:space="preserve">
+    <value>Diagnose</value>
+  </data>
+  <data name="FileUpload" xml:space="preserve">
+    <value>File Upload</value>
+  </data>
+  <data name="ICDInformation" xml:space="preserve">
+    <value>ICD</value>
+  </data>
+  <data name="Laboratory" xml:space="preserve">
+    <value>Laboratory</value>
+  </data>
+  <data name="Medicine" xml:space="preserve">
+    <value>Medicine</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>Remove</value>
+  </data>
+  <data name="Result" xml:space="preserve">
+    <value>Result</value>
+  </data>
+  <data name="SaveExamine" xml:space="preserve">
+    <value>Save Examine</value>
+  </data>
+  <data name="SelectFile" xml:space="preserve">
+    <value>Select File</value>
+  </data>
+  <data name="Service" xml:space="preserve">
+    <value>Service</value>
+  </data>
+  <data name="Theraphy" xml:space="preserve">
+    <value>Theraphy</value>
+  </data>
+  <data name="Amount" xml:space="preserve">
+    <value>Amount</value>
+  </data>
+  <data name="AreYouSure" xml:space="preserve">
+    <value>Are you sure?</value>
+  </data>
+  <data name="AreYouSureDelete" xml:space="preserve">
+    <value>Are you sure that you want to delete this row?</value>
+  </data>
+  <data name="Dose" xml:space="preserve">
+    <value>Dose</value>
+  </data>
+  <data name="Examine" xml:space="preserve">
+    <value>Examine</value>
+  </data>
+  <data name="FinalState" xml:space="preserve">
+    <value>Final State</value>
+  </data>
+  <data name="ForwardTo" xml:space="preserve">
+    <value>Forward to</value>
+  </data>
+  <data name="Injection" xml:space="preserve">
+    <value>Injection</value>
+  </data>
+  <data name="Radiology" xml:space="preserve">
+    <value>Radiology</value>
+  </data>
+  <data name="Total" xml:space="preserve">
+    <value>Total</value>
+  </data>
+  <data name="Volume" xml:space="preserve">
+    <value>Volume</value>
+  </data>
 </root>
