--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -930,4 +930,7 @@
   <data name="Price" xml:space="preserve">
     <value>Price</value>
   </data>
+  <data name="OldPassword" xml:space="preserve">
+    <value>Old Password</value>
+  </data>
 </root>
