--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -816,21 +816,18 @@
   <data name="Volume" xml:space="preserve">
     <value>Volume</value>
   </data>
-
   <data name="PreExamineQueue" xml:space="preserve">
     <value>PreExamine Queue</value>
   </data>
   <data name="LaboratoriumQueue" xml:space="preserve">
     <value>Laboratorium Queue</value>
-</data>
-  
+  </data>
   <data name="Stock" xml:space="preserve">
     <value>Stock</value>
   </data>
   <data name="Add" xml:space="preserve">
     <value>Add</value>
   </data>
-
   <data name="ConcoctionMedicine" xml:space="preserve">
     <value>Concoction Medicine</value>
   </data>
@@ -942,5 +939,19 @@
   <data name="OldPassword" xml:space="preserve">
     <value>Old Password</value>
   </data>
-
+  <data name="InputLabResult" xml:space="preserve">
+    <value>Input Result</value>
+  </data>
+  <data name="Conclusion" xml:space="preserve">
+    <value>Conclusion</value>
+  </data>
+  <data name="LabItemId" xml:space="preserve">
+    <value>Lab Item ID</value>
+  </data>
+  <data name="LabType" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="ResultIndicator" xml:space="preserve">
+    <value>Result Indicator</value>
+  </data>
 </root>
