--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -954,11 +954,13 @@
   <data name="ResultIndicator" xml:space="preserve">
     <value>Result Indicator</value>
   </data>
-
   <data name="RadiologiQueue" xml:space="preserve">
     <value>Radiology Queue</value>
-</data>
+  </data>
   <data name="PoliServiceList" xml:space="preserve">
     <value>Poli Service List</value>
+  </data>
+  <data name="Invoice" xml:space="preserve">
+    <value>Invoice</value>
   </data>
 </root>
