--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1008,4 +1008,10 @@
   <data name="Visus" xml:space="preserve">
     <value>Visus</value>
   </data>
+  <data name="FarmasiQueue" xml:space="preserve">
+    <value>Antrian Farmasi</value>
+  </data>
+  <data name="Validate" xml:space="preserve">
+    <value>Validasi</value>
+  </data>
 </root>
