Purchase Order Pusat

--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1095,4 +1095,7 @@
   <data name="VendorList" xml:space="preserve">
     <value>Vendor List</value>
   </data>
+  <data name="PurchaseOrderPusatList" xml:space="preserve">
+    <value>Purchase Order Pusat List</value>
+  </data>
 </root>
