--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1122,4 +1122,7 @@
   <data name="PurchaseRequestList" xml:space="preserve">
     <value>PurchaseRequestList</value>
   </data>
+  <data name="Note" xml:space="preserve">
+    <value>Note</value>
+  </data>
 </root>
