--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1146,4 +1146,16 @@
   <data name="Queue" xml:space="preserve">
     <value>Queue</value>
   </data>
+  <data name="DeliveryOrderDetailList" xml:space="preserve">
+    <value>Delivery Order List</value>
+  </data>
+  <data name="DeliveryOrderPusatDetailList" xml:space="preserve">
+    <value>Delivery Order Pusat Detail List</value>
+  </data>
+  <data name="PurchaseOrderDetailList" xml:space="preserve">
+    <value>Purchase Order Detail List</value>
+  </data>
+  <data name="PurchaseOrderPusatDetailList" xml:space="preserve">
+    <value>Purchase Order Pusat Detail List</value>
+  </data>
 </root>
