--- a/Klinik.Resources/Messages.resx
+++ b/Klinik.Resources/Messages.resx
@@ -301,4 +301,7 @@ Administrator</value>
   <data name="MedicineRequestInvalid" xml:space="preserve">
     <value>Process ( Request ) is invalid. Its medicine name should be blank</value>
   </data>
+  <data name="PrescriptionProcessSuccess" xml:space="preserve">
+    <value>Prescription Process Success</value>
+  </data>
 </root>
