--- a/Klinik.Resources/UIMessages.resx
+++ b/Klinik.Resources/UIMessages.resx
@@ -1168,6 +1168,6 @@
     <value>Nama Gudang</value>
   </data>
   <data name="ValidationConfirmation" xml:space="preserve">
-    <value>Apakah kanan diproses lebih lanjut untuk menjadi PO?</value>
+    <value>Apakah kanan diproses lebih lanjut untuk menjadi</value>
   </data>
 </root>
